# automodel

./: Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.agents/skills/cargo-release/: SKILL.md
.agents/skills/invalidate-generated/: SKILL.md
.agents/skills/testing/: SKILL.md
.claude/agents/: test-agent.agent.md
automodel-cli/: Cargo.toml
automodel-cli/src/: main.rs
automodel-lib/: Cargo.toml
automodel-lib/src/: datetime_crate.rs  domain_enum.rs  lib.rs  query_definition.rs  query_definition_rt.rs  rust_type.rs  sqlfile_parser.rs  types_extractor.rs  utils.rs
automodel-lib/src/codegen/: mod.rs  module_generator.rs  rustfmt.rs  sql_formatter.rs  types_generator.rs
automodel-runtime/: Cargo.toml
automodel-runtime/src/: lib.rs
doc/: composite-types-vs-jsonb.md
example-app/: .env  Cargo.toml  automodel.yml  build.rs
example-app/migrations/: 003_add_all_types_table.sql  004_add_social_links.sql  005_add_tags_jsonb_array.sql  006_add_labels_jsonb_array_required.sql  007_add_widgets.sql  008_add_user_with_links_input.sql  009_make_widget_input_name_required.sql  010_add_domain_types.sql  011_add_partitioned_orders.sql  012_add_articles.sql  013_add_domain_enum_types.sql
example-app/queries/analytics/: 41_get_non_null_count_expression.sql  42_get_non_null_multi_fields.sql  43_get_non_null_multi_rows.sql
example-app/queries/articles/: 01_batch_insert_articles.sql  02_get_article_by_id.sql  03_batch_insert_articles_scalar_native.sql
example-app/queries/orders/: 01_insert_order.sql  02_get_orders_by_tenant.sql  03_get_orders_by_product.sql  04_get_orders_by_tenant_range.sql
example-app/queries/products/: 01_insert_product.sql  02_get_all_products.sql  03_get_products_by_priority.sql
example-app/queries/user_model/: 42_create_user.sql  43_update_user_full.sql  44_update_user_partial.sql  46_update_user_nullable.sql
example-app/queries/users/: 30_update_user_returning_applied.sql  31_get_user_is_recent.sql  50_update_user_social_links.sql  51_get_user_social_links.sql  52_insert_user_with_social_links.sql  test_explicit_native_multiunzip.sql  test_explicit_native_without_multiunzip.sql  test_nested_row.sql  test_optional_multiunzip.sql  test_optional_without_multiunzip.sql
example-app/queries/users_array_fields/: 53_update_user_social_links_nullable.sql  54_insert_user_social_links_structured.sql  55_update_user_social_links_diff.sql  56_update_user_social_links_conditional.sql  57_insert_users_batch_social_links.sql  58_update_user_tags.sql  59_get_user_tags.sql  60_insert_user_tags_structured.sql  61_update_user_tags_diff.sql  62_update_user_tags_conditional.sql  63_insert_users_batch_tags.sql  64_update_user_labels.sql  65_get_user_labels.sql  66_insert_user_labels_structured.sql  67_update_user_labels_diff.sql  68_update_user_labels_conditional.sql  69_insert_users_batch_labels.sql  74_insert_users_bulk_composite.sql
example-app/queries/widgets/: 70_insert_widgets_bulk.sql  71_insert_widgets_custom_type.sql  72_get_all_widgets.sql  73_insert_widget_single.sql
example-app/src/: lib.rs  main.rs  models.rs
example-app/tests/: test_aggregate_queries.rs  test_all_pg_types.rs  test_batch_insert_composite.rs  test_batch_insert_optional.rs  test_conditional_update.rs  test_conditional_where.rs  test_custom_derives.rs  test_ddl_queries.rs  test_domain_types.rs  test_insert_and_batch.rs  test_jsonb_array_nullable.rs  test_jsonb_array_required.rs  test_jsonb_custom_type.rs  test_jsonb_nullable_multiunzip.rs  test_non_null_columns.rs  test_optional_nullable_params.rs  test_partitioned_tables.rs  test_ref_params.rs  test_select_star.rs  test_struct_reuse.rs
example-app/tests/common/: mod.rs
scripts/: migrate.sh
src/persistence/: mod.rs
src/persistence/types/: mod.rs
