[package]
name = "automodel-cli"
version = "0.9.0"
edition = "2021"
description = "Command-line interface for AutoModel - generate typed functions from YAML-defined SQL queries"
license = "MIT"
repository = "https://github.com/thepartly/automodel"
keywords = ["sql", "postgresql", "codegen", "database", "cli"]
categories = ["command-line-utilities", "database", "development-tools"]
readme = "../README.md"

[[bin]]
name = "automodel"
path = "src/main.rs"

[dependencies]
automodel = { path = "../automodel-lib", version = "0" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
