[package]
name = "automodel"
version = "0.11.0"
edition = "2021"
description = "AutoModel — SQL-first Reverse ORM for Rust, Built for the greater DX and for the AI Era"
license = "MIT"
repository = "https://github.com/thepartly/automodel"
keywords = ["sql", "postgresql", "codegen", "database", "yaml"]
categories = ["database", "development-tools"]
readme = "../README.md"

[dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }     # Still needed for type extraction
serde = { workspace = true }
serde_yaml = { workspace = true }
sea-query = { workspace = true }
sea-query-postgres = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
sha2 = "0.10"
futures = "0.3"
regex = { workspace = true }
indexmap = { workspace = true }

