[package]
name = "automodel-runtime"
version = "0.11.0"
edition = "2021"
description = "Runtime error types for AutoModel generated persistence code"
license = "MIT"
repository = "https://github.com/thepartly/automodel"
keywords = ["sql", "postgresql", "database", "errors"]
categories = ["database"]

[dependencies]
sqlx = { workspace = true }
