[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_app"
path = "src/lib.rs"

[[bin]]
name = "example-app"
path = "src/main.rs"

[dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres", "serde"] }
tracing = "0.1"
bit-vec = { version = "0.6", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
mac_address = "1.1"
itertools = "0.13"
many-unzip = "0.1"

[build-dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
