[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_app"
path = "src/lib.rs"

[[bin]]
name = "example-app"
path = "src/main.rs"

[dependencies]
automodel = { path = "../automodel-lib" }
automodel-runtime = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres", "serde"] }
tracing = "0.1"
bit-vec = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
mac_address = "1.1"
itertools = "0.15"
many-unzip = "0.1"

[build-dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
